ionos_dev/dome-certification/backend/certification-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certification-backend
  labels:
    app: certification-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certification-backend
  template:
    metadata:
      labels:
        app: certification-backend
    spec:
      containers:
        - name: certification-backend
          image: bfeitaisuw/dome-compliance-backend:dev-1.3.13
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: uploads
              mountPath: /dome-upload
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: dome-certification-upload-pvc
